nginx-chart/ingress-res.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-res
spec:
  rules:
  - host: hosting.com
    http:
      paths:
      - path: /wordpress1
        backend:
          serviceName: wordpress
          servicePort: 80
      - path: /wordpress2
        backend:
          serviceName: wordpress2
          servicePort: 80
